@@ -1151,6 +1151,11 @@ void Core::startMplayer( QString file, double seek ) {
 		lavdopts += "vismv=7";
 	}
 
+	if (pref->threads > 1) {
+		if (!lavdopts.isEmpty()) lavdopts += ":";
+		lavdopts += "threads=" + QString::number(pref->threads);
+	}
+
 	if (!lavdopts.isEmpty()) {
 		proc->addArgument("-lavdopts");
 		proc->addArgument(lavdopts);
